# microservice-chat

./: README.md  docker-compose.yml
auth_service/: Dockerfile  justfile
auth_service/cmd/: main.go
auth_service/pkg/: broker.go  handlers.go  utils.go
conf/: nginx.conf
configs/: nginx.conf
login_service/: Dockerfile  go.mod  go.sum  justfile
login_service/cmd/: main.go
login_service/pkg/: broker.go  handlers.go  utils.go
message_service/: .gitignore  Dockerfile  init_db.py  justfile  main.py  pyproject.toml
message_service/message_service/cache/: client.py
message_service/message_service/db/: __init__.py  models.py
message_service/message_service/seriallizer/: models.py
ui-service/: Dockerfile  index.html  package.json
ui-service/src/: App.module.css  App.tsx  Login.tsx  index.tsx  models.ts  receiver.ts
